feat: implement public tender controller, S3 service, and tender management services for bid and tender retrieval and processing.